<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lista De Tarefas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tarefa">Tarefa</string>
    <string name="conclusao">Conclusão</string>
    <string name="categoria">Categoria</string>
    <string name="importancia">Importância</string>
    <string name="barra">/ / /</string>
    <string name="alta">Alta</string>
    <string name="media">Media</string>
    <string name="baixa">Baixa</string>
    <string name="acao_cadastrar">Cadastrar</string>
    <string name="acao_cancelar">Listar Todos</string>
    <string name="title_activity_listagem">ListagemActivity</string>
    <string name="data">Data</string>

</resources>
