<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    
    
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_below="@+id/linearLayout1"
        android:background="@drawable/layoutshape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tx_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.15"
                android:text="@string/categoria"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tx_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/data" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/cb_concluido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35" />

            <TextView
                android:id="@+id/tx_tarefa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.16"
                android:text="@string/tarefa"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/iv_prioridade"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:src="@drawable/ic_baixa" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
